@@ -2,7 +2,7 @@ Package: synbreed
 Type: Package
 Title: Framework for the Analysis of Genomic Prediction Data using R
 Version: 0.12-4
-Date: 2017-04-04
+Date: 2017-04-05
 Author: Hans-Juergen Auinger, Valentin Wimmer, Theresa Albrecht, Chris-Carolin Schoen with contributions by Larry Schaeffer, Malena Erbe, Ulrike Ober, Christian Reimer, Yvonne Badke and Peter VandeHaar
 Depends: R (>= 2.14)
 Imports: abind, BGLR, doBy, doParallel, foreach, grid, igraph, lattice, LDheatmap, MASS, methods, parallel, qtl, regress (>= 1.3-8)
